crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_ui_form_example.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: test.inlay_hints_with_settings(&basedpython_ui_settings())
---

from basedpython_ui import composable, state, derived, Column, Row, Text, Button, TextField, Modifier, TextStyle, run_app


let ERROR_STYLE = TextStyle(color="#b00020")


frozen data class Signup:
    name: str
    email: str


def validate_name(value: str) -> str?:
    return "name is required" if value.strip() == "" else None


def validate_email(value: str) -> str?:
    if "@" not in value or value.startswith("@"):
        return "enter a valid e-mail address"
    return None


@composable
def Field(label: str, value: str, error: str?, on_change: (str) -> None):
    Column(Modifier().padding(4)):
        Text(label)
        TextField(value, on_change=on_change)
        if error is not None:
            Text(error, style=ERROR_STYLE)


@composable
def SignupForm(on_submit: (Signup) -> None)[ reads name, email, submitted, name_error, email_error, can_submit]:
    let name = state("")
    let email = state("")
    let submitted = state(False)
    # derived values are recomputed only when a dependency changes, and never observed half-updated
    let name_error = derived(lambda: validate_name(name.value))[ depends on name]
    let email_error = derived(lambda: validate_email(email.value))[ depends on email]
    let can_submit = derived(lambda: name_error.value is None and email_error.value is None)[ depends on name_error, email_error]

    Column(Modifier().padding(16)):
        Field("name", name.value, name_error.value if submitted.value else None):
            name.value = it[ invalidates Field, SignupForm, name_error, can_submit, …]
        Field("e-mail", email.value, email_error.value if submitted.value else None):
            email.value = it[ invalidates Field, SignupForm, email_error, can_submit, …]
        Row:
            Button("sign up", enabled=can_submit.value or not submitted.value):
                submitted.value = True[ invalidates Field, SignupForm, …]
                if can_submit.value:
                    on_submit(Signup(name.value, email.value))
            Button("clear"):
                name.value = ""[ invalidates Field, SignupForm, name_error, can_submit, …]
                email.value = ""[ invalidates Field, SignupForm, email_error, can_submit, …]
                submitted.value = False[ invalidates Field, SignupForm, …]


def main():
    run_app("sign up"):
        SignupForm(on_submit=lambda s: print("welcome", s.name, s.email))

---------------------------------------------
info[inlay-hint-location]: Inlay Hint Target
  --> main.by:34:9
   |
34 |     let name = state("")
   |         ^^^^
info: Source
  --> main2.py:33:52
   |
33 | def SignupForm(on_submit: (Signup) -> None)[ reads name, email, submitted, name_error, email_error, can_submit]:
   |                                                    ^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:35:9
   |
35 |     let email = state("")
   |         ^^^^^
info: Source
  --> main2.py:33:58
   |
33 | def SignupForm(on_submit: (Signup) -> None)[ reads name, email, submitted, name_error, email_error, can_submit]:
   |                                                          ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:36:9
   |
36 |     let submitted = state(False)
   |         ^^^^^^^^^
info: Source
  --> main2.py:33:65
   |
33 | def SignupForm(on_submit: (Signup) -> None)[ reads name, email, submitted, name_error, email_error, can_submit]:
   |                                                                 ^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:38:9
   |
38 |     let name_error = derived(lambda: validate_name(name.value))
   |         ^^^^^^^^^^
info: Source
  --> main2.py:33:76
   |
33 | def SignupForm(on_submit: (Signup) -> None)[ reads name, email, submitted, name_error, email_error, can_submit]:
   |                                                                            ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:39:9
   |
39 |     let email_error = derived(lambda: validate_email(email.value))
   |         ^^^^^^^^^^^
info: Source
  --> main2.py:33:88
   |
33 | def SignupForm(on_submit: (Signup) -> None)[ reads name, email, submitted, name_error, email_error, can_submit]:
   |                                                                                        ^^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:40:9
   |
40 |     let can_submit = derived(lambda: name_error.value is None and email_error.value is None)
   |         ^^^^^^^^^^
info: Source
  --> main2.py:33:101
   |
33 | def SignupForm(on_submit: (Signup) -> None)[ reads name, email, submitted, name_error, email_error, can_submit]:
   |                                                                                                     ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:34:9
   |
34 |     let name = state("")
   |         ^^^^
info: Source
  --> main2.py:38:77
   |
38 |     let name_error = derived(lambda: validate_name(name.value))[ depends on name]
   |                                                                             ^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:35:9
   |
35 |     let email = state("")
   |         ^^^^^
info: Source
  --> main2.py:39:80
   |
39 |     let email_error = derived(lambda: validate_email(email.value))[ depends on email]
   |                                                                                ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:38:9
   |
38 |     let name_error = derived(lambda: validate_name(name.value))
   |         ^^^^^^^^^^
info: Source
  --> main2.py:40:106
   |
40 |     let can_submit = derived(lambda: name_error.value is None and email_error.value is None)[ depends on name_error, email_error]
   |                                                                                                          ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:39:9
   |
39 |     let email_error = derived(lambda: validate_email(email.value))
   |         ^^^^^^^^^^^
info: Source
  --> main2.py:40:118
   |
40 |     let can_submit = derived(lambda: name_error.value is None and email_error.value is None)[ depends on name_error, email_error]
   |                                                                                                                      ^^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:24:5
   |
24 | def Field(label: str, value: str, error: str?, on_change: (str) -> None):
   |     ^^^^^
info: Source
  --> main2.py:44:42
   |
44 |             name.value = it[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                          ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:33:5
   |
33 | def SignupForm(on_submit: (Signup) -> None):
   |     ^^^^^^^^^^
info: Source
  --> main2.py:44:49
   |
44 |             name.value = it[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                                 ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:38:9
   |
38 |     let name_error = derived(lambda: validate_name(name.value))
   |         ^^^^^^^^^^
info: Source
  --> main2.py:44:61
   |
44 |             name.value = it[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                                             ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:40:9
   |
40 |     let can_submit = derived(lambda: name_error.value is None and email_error.value is None)
   |         ^^^^^^^^^^
info: Source
  --> main2.py:44:73
   |
44 |             name.value = it[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                                                         ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:24:5
   |
24 | def Field(label: str, value: str, error: str?, on_change: (str) -> None):
   |     ^^^^^
info: Source
  --> main2.py:46:43
   |
46 |             email.value = it[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                           ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:33:5
   |
33 | def SignupForm(on_submit: (Signup) -> None):
   |     ^^^^^^^^^^
info: Source
  --> main2.py:46:50
   |
46 |             email.value = it[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                                  ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:39:9
   |
39 |     let email_error = derived(lambda: validate_email(email.value))
   |         ^^^^^^^^^^^
info: Source
  --> main2.py:46:62
   |
46 |             email.value = it[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                                              ^^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:40:9
   |
40 |     let can_submit = derived(lambda: name_error.value is None and email_error.value is None)
   |         ^^^^^^^^^^
info: Source
  --> main2.py:46:75
   |
46 |             email.value = it[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                                                           ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:24:5
   |
24 | def Field(label: str, value: str, error: str?, on_change: (str) -> None):
   |     ^^^^^
info: Source
  --> main2.py:49:53
   |
49 |                 submitted.value = True[ invalidates Field, SignupForm, …]
   |                                                     ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:33:5
   |
33 | def SignupForm(on_submit: (Signup) -> None):
   |     ^^^^^^^^^^
info: Source
  --> main2.py:49:60
   |
49 |                 submitted.value = True[ invalidates Field, SignupForm, …]
   |                                                            ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:24:5
   |
24 | def Field(label: str, value: str, error: str?, on_change: (str) -> None):
   |     ^^^^^
info: Source
  --> main2.py:53:46
   |
53 |                 name.value = ""[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                              ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:33:5
   |
33 | def SignupForm(on_submit: (Signup) -> None):
   |     ^^^^^^^^^^
info: Source
  --> main2.py:53:53
   |
53 |                 name.value = ""[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                                     ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:38:9
   |
38 |     let name_error = derived(lambda: validate_name(name.value))
   |         ^^^^^^^^^^
info: Source
  --> main2.py:53:65
   |
53 |                 name.value = ""[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                                                 ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:40:9
   |
40 |     let can_submit = derived(lambda: name_error.value is None and email_error.value is None)
   |         ^^^^^^^^^^
info: Source
  --> main2.py:53:77
   |
53 |                 name.value = ""[ invalidates Field, SignupForm, name_error, can_submit, …]
   |                                                                             ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:24:5
   |
24 | def Field(label: str, value: str, error: str?, on_change: (str) -> None):
   |     ^^^^^
info: Source
  --> main2.py:54:47
   |
54 |                 email.value = ""[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                               ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:33:5
   |
33 | def SignupForm(on_submit: (Signup) -> None):
   |     ^^^^^^^^^^
info: Source
  --> main2.py:54:54
   |
54 |                 email.value = ""[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                                      ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:39:9
   |
39 |     let email_error = derived(lambda: validate_email(email.value))
   |         ^^^^^^^^^^^
info: Source
  --> main2.py:54:66
   |
54 |                 email.value = ""[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                                                  ^^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:40:9
   |
40 |     let can_submit = derived(lambda: name_error.value is None and email_error.value is None)
   |         ^^^^^^^^^^
info: Source
  --> main2.py:54:79
   |
54 |                 email.value = ""[ invalidates Field, SignupForm, email_error, can_submit, …]
   |                                                                               ^^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:24:5
   |
24 | def Field(label: str, value: str, error: str?, on_change: (str) -> None):
   |     ^^^^^
info: Source
  --> main2.py:55:54
   |
55 |                 submitted.value = False[ invalidates Field, SignupForm, …]
   |                                                      ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:33:5
   |
33 | def SignupForm(on_submit: (Signup) -> None):
   |     ^^^^^^^^^^
info: Source
  --> main2.py:55:61
   |
55 |                 submitted.value = False[ invalidates Field, SignupForm, …]
   |                                                             ^^^^^^^^^^
