crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_ui_todo_example.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: test.inlay_hints_with_settings(&basedpython_ui_settings())
---

from basedpython_ui import (
    composable, state, state_list, derived, Column, Row, Text, Button, Checkbox, TextField, Modifier, run_app,
)


frozen data class Todo:            # immutable: the only way to change a todo is to replace it in the list
    id: int
    title: str
    done: bool = False


@composable
def TodoRow(todo: Todo, on_delete: () -> None, on_toggle: (bool) -> None):
    Row(Modifier().padding(4)):
        Checkbox(todo.done, on_change=on_toggle)
        Text(todo.title, modifier=weight(1.0))
        Button("x", on_click=on_delete)


@composable
def TodoApp()[ reads todos, draft, remaining]:
    let todos = state_list([Todo(1, "write the runtime"), Todo(2, "ship it")])   # StateList[Todo]: observable
    let draft = state("")
    let next_id = state(3)
    let remaining = derived(lambda: sum(1 for t in todos if not t.done))        # ⟨depends on todos⟩[ depends on todos]

    Column(Modifier().padding(12)):
        Text(f"{remaining.value} of {len(todos)} remaining")
        Row:
            TextField(draft.value, placeholder="what needs doing?", modifier=weight(1.0)):
                draft.value = it[ invalidates TodoRow, TodoApp]                                                # `it: str`, the new text
            Button("add", enabled=draft.value != ""):
                todos.append(Todo(next_id.value, draft.value))[ invalidates TodoRow, TodoApp, remaining]
                next_id.value += 1[ invalidates nothing]
                draft.value = ""[ invalidates TodoRow, TodoApp]
        todos.each_indexed(key=lambda todo: todo.id):                          # keyed children; `it` is this row
            let row = it                                                        # the inner block below has its own `it`
            TodoRow(row.item, on_delete=lambda: todos.remove_at(row.index)[ invalidates TodoRow, TodoApp, remaining]):
                todos[row.index] = Todo(row.item.id, row.item.title, it)[ invalidates TodoRow, TodoApp, remaining]        # `it: bool` from `on_toggle`
        if len(todos) == 0:
            Text("nothing to do")


def main():
    run_app("todos"):
        TodoApp()

---------------------------------------------
info[inlay-hint-location]: Inlay Hint Target
  --> main.by:23:9
   |
23 |     let todos = state_list([Todo(1, "write the runtime"), Todo(2, "ship it")])   # StateList[Todo]: observable
   |         ^^^^^
info: Source
  --> main2.py:22:22
   |
22 | def TodoApp()[ reads todos, draft, remaining]:
   |                      ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:24:9
   |
24 |     let draft = state("")
   |         ^^^^^
info: Source
  --> main2.py:22:29
   |
22 | def TodoApp()[ reads todos, draft, remaining]:
   |                             ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:26:9
   |
26 |     let remaining = derived(lambda: sum(1 for t in todos if not t.done))        # ⟨depends on todos⟩
   |         ^^^^^^^^^
info: Source
  --> main2.py:22:36
   |
22 | def TodoApp()[ reads todos, draft, remaining]:
   |                                    ^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:23:9
   |
23 |     let todos = state_list([Todo(1, "write the runtime"), Todo(2, "ship it")])   # StateList[Todo]: observable
   |         ^^^^^
info: Source
  --> main2.py:26:114
   |
26 |     let remaining = derived(lambda: sum(1 for t in todos if not t.done))        # ⟨depends on todos⟩[ depends on todos]
   |                                                                                                                  ^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:14:5
   |
14 | def TodoRow(todo: Todo, on_delete: () -> None, on_toggle: (bool) -> None):
   |     ^^^^^^^
info: Source
  --> main2.py:32:47
   |
32 | …     draft.value = it[ invalidates TodoRow, TodoApp]                                                # `it: str`, the new text
   |                                     ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:22:5
   |
22 | def TodoApp():
   |     ^^^^^^^
info: Source
  --> main2.py:32:56
   |
32 | …     draft.value = it[ invalidates TodoRow, TodoApp]                                                # `it: str`, the new text
   |                                              ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:14:5
   |
14 | def TodoRow(todo: Todo, on_delete: () -> None, on_toggle: (bool) -> None):
   |     ^^^^^^^
info: Source
  --> main2.py:34:77
   |
34 |                 todos.append(Todo(next_id.value, draft.value))[ invalidates TodoRow, TodoApp, remaining]
   |                                                                             ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:22:5
   |
22 | def TodoApp():
   |     ^^^^^^^
info: Source
  --> main2.py:34:86
   |
34 |                 todos.append(Todo(next_id.value, draft.value))[ invalidates TodoRow, TodoApp, remaining]
   |                                                                                      ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:26:9
   |
26 |     let remaining = derived(lambda: sum(1 for t in todos if not t.done))        # ⟨depends on todos⟩
   |         ^^^^^^^^^
info: Source
  --> main2.py:34:95
   |
34 |                 todos.append(Todo(next_id.value, draft.value))[ invalidates TodoRow, TodoApp, remaining]
   |                                                                                               ^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:14:5
   |
14 | def TodoRow(todo: Todo, on_delete: () -> None, on_toggle: (bool) -> None):
   |     ^^^^^^^
info: Source
  --> main2.py:36:47
   |
36 |                 draft.value = ""[ invalidates TodoRow, TodoApp]
   |                                               ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:22:5
   |
22 | def TodoApp():
   |     ^^^^^^^
info: Source
  --> main2.py:36:56
   |
36 |                 draft.value = ""[ invalidates TodoRow, TodoApp]
   |                                                        ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:14:5
   |
14 | def TodoRow(todo: Todo, on_delete: () -> None, on_toggle: (bool) -> None):
   |     ^^^^^^^
info: Source
  --> main2.py:39:89
   |
39 |             TodoRow(row.item, on_delete=lambda: todos.remove_at(row.index)[ invalidates TodoRow, TodoApp, remaining]):
   |                                                                                         ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:22:5
   |
22 | def TodoApp():
   |     ^^^^^^^
info: Source
  --> main2.py:39:98
   |
39 |             TodoRow(row.item, on_delete=lambda: todos.remove_at(row.index)[ invalidates TodoRow, TodoApp, remaining]):
   |                                                                                                  ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:26:9
   |
26 |     let remaining = derived(lambda: sum(1 for t in todos if not t.done))        # ⟨depends on todos⟩
   |         ^^^^^^^^^
info: Source
  --> main2.py:39:107
   |
39 |             TodoRow(row.item, on_delete=lambda: todos.remove_at(row.index)[ invalidates TodoRow, TodoApp, remaining]):
   |                                                                                                           ^^^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:14:5
   |
14 | def TodoRow(todo: Todo, on_delete: () -> None, on_toggle: (bool) -> None):
   |     ^^^^^^^
info: Source
  --> main2.py:40:87
   |
40 | …     todos[row.index] = Todo(row.item.id, row.item.title, it)[ invalidates TodoRow, TodoApp, remaining]        # `it: bool` from `on_…
   |                                                                             ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:22:5
   |
22 | def TodoApp():
   |     ^^^^^^^
info: Source
  --> main2.py:40:96
   |
40 | …     todos[row.index] = Todo(row.item.id, row.item.title, it)[ invalidates TodoRow, TodoApp, remaining]        # `it: bool` from `on_…
   |                                                                                      ^^^^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> main.by:26:9
   |
26 |     let remaining = derived(lambda: sum(1 for t in todos if not t.done))        # ⟨depends on todos⟩
   |         ^^^^^^^^^
info: Source
  --> main2.py:40:105
   |
40 | …     todos[row.index] = Todo(row.item.id, row.item.title, it)[ invalidates TodoRow, TodoApp, remaining]        # `it: bool` from `on_…
   |                                                                                               ^^^^^^^^^
