crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__call_type_arguments.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ call_type_arguments: true, ..InlayHintSettings::none() })"
---

def identity[T](x: T) -> T:
    return x

def pair[T, U](a: T, b: U) -> tuple[T, U]:
    return (a, b)

def plain(x: int) -> int:
    return x

class Box[T]:
    def __init__(self, value: T) -> None: ...

identity[[Literal[1]]](1)
pair[[Literal["a"], Literal[2]]]('a', 2)
plain(1)
Box[[Literal[1]]](1)
Box[str]('a')

---------------------------------------------
info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
   |
info: Source
  --> main2.py:LL:11
   |
LL | identity[[Literal[1]]](1)
   |           ^^^^^^^^^^
   |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class str(Sequence[str]):
   |       ^^^
   |
info: Source
  --> main2.py:LL:7
   |
LL | pair[[Literal["a"], Literal[2]]]('a', 2)
   |       ^^^^^^^^^^^^
   |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
   |
info: Source
  --> main2.py:LL:21
   |
LL | pair[[Literal["a"], Literal[2]]]('a', 2)
   |                     ^^^^^^^^^^
   |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
   |
info: Source
  --> main2.py:LL:6
   |
LL | Box[[Literal[1]]](1)
   |      ^^^^^^^^^^
   |
