crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__inferred_return_type_that_never_settles.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ inferred_return_types: true, ..InlayHintSettings::none() })"
---

def f():
    return f()
