crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__numeric_promotions_already_written_in_the_union.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ numeric_promotions: true, ..InlayHintSettings::none() })"
---

from typing import Union

def f(
    a: float | int,
    b: int | float,
    c: complex[ | float] | int,
    d: complex | float,
    e: float[ | int] | str,
    f: Union[float, int],
    g: Union[float[ | int], str],
    h: list[float[ | int]] | int,
    i: str | float | int,
) -> None: ...
