crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__property_type_hint_above_the_requested_range.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ property_types: true, ..InlayHintSettings::none() })"
---

class A:
    let a[: 1]
        get() = 1
