crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__property_type_hint_can_be_turned_off.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ property_types: false, ..InlayHintSettings::default() })"
---

class A:
    let a
        get() = 1
