crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__property_type_hint_shapes.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ property_types: true, ..InlayHintSettings::none() })"
---

class A:
    private let b[: "b"]
        get() = 'b'

    static let c[: 3]
        get() = 3

    let n[: None]
        get(): pass
